# PathTracing

./: .gitignore  CMakeLists.txt  LICENSE  README.md  script.sh
image/: Higokumaru.ppm  basic_scene.ppm  bedroom.ppm  bmps.ppm  bottle_on_table.ppm  desk.ppm  metal_and_glass.ppm  mis.ppm  mis_brdf.ppm  mis_light.ppm  mis_mis.ppm  poke.ppm  street.ppm  teapot.ppm  uniform_sampling.ppm
include/: Configuration.h
include/camera/: AbstractCamera.h  Camera.h  DefocusBlur.h  Perspective.h  PerspectiveCamera.h
include/light/: BlueNoiseDiskLight.cpp  BlueNoiseDiskLight.h  BlueNoiseDiskLightZ.h  DiskLightZ.h  GridDiskLightZ.h  Light.h  UniformDiskLightZ.h
include/material/: Dielectric.h  DiffuseLight.h  Emission.h  GlossyBRDF.h  Lambertian.h  Material.h  Metal.h  TorranceSparrow.h
include/object/: BVHTree.h  Hittable.h  HittableList.h
include/object/mesh/: MeshTriangle.h  MeshUtil.h
include/object/native/: Cylinder.h  Disk.h  Rectangle.h  Sphere.h  Triangle.h  TriangularPyramid.h  Tube.h
include/render/: BRDFSampler.h  LightSampler.h  MISampler.h  PathTracer.h  RayTracer.h  Renderer.h  RendererFactory.h
include/scene/: Object.h  Scene.h
include/surface/: Facet.h  Surface.h  Triangle.h
include/texture/: ConstantTexture.h  ImageTexture.h  Texture.h
include/util/: AABB.h  BVH.h  FunctionUtil.h  HitResolver.h  ImageUtil.h  Matrix3f.h  OBJFile.h  Random.h  Ray.h  Vector3f.h
include/util/accelerator/: BVH.h  HitResolver.h
include/util/image/: ImageBuffer.h  ImageUtil.h
include/util/math/: Random.h  Vector3d.h
include/util/mesh/: OBJFile.h
include/util/model/: Box.h  Ray.h
resource/Higokumaru/: Higo_Body.ppm  Higo_Fire.ppm
resource/bmps/: greymarble.ppm
src/: CMakeLists.txt  Configuration.cpp  main.cpp  random_spheres.cpp
src/camera/: AbstractCamera.cpp  DefocusBlur.cpp  Perspective.cpp  PerspectiveCamera.cpp
src/example/: 4_lights.cpp  Higokumaru.cpp  basic_scene.cpp  bedroom.cpp  bmps.cpp  bottle_on_table.cpp  cube.cpp  desk.cpp  grid_sampling.cpp  metal_and_glass.cpp  mis.cpp  poke.cpp  random_geometries.cpp  random_spheres.cpp  sampling_box.cpp  sampling_cornell.cpp  sampling_rect.cpp  sphere.cpp  street.cpp  teapot.cpp  uniform_sampling.cpp
src/light/: BlueNoiseDiskLightZ.cpp  DiskLightZ.cpp  GridDiskLightZ.cpp  Light.cpp  UniformDiskLightZ.cpp
src/material/: Dielectric.cpp  DiffuseLight.cpp  Emission.cpp  GlossyBRDF.cpp  Lambertian.cpp  Material.cpp  Metal.cpp  TorranceSparrow.cpp
src/object/: BVHTree.cpp  Hittable.cpp  HittableList.cpp
src/object/mesh/: MeshTriangle.cpp  MeshUtil.cpp
src/object/native/: Cylinder.cpp  Disk.cpp  Rectangle.cpp  Sphere.cpp  Triangle.cpp  TriangularPyramid.cpp  Tube.cpp
src/render/: BRDFSampler.cpp  LightSampler.cpp  MISampler.cpp  PathTracer.cpp  RayTracer.cpp
src/scene/: Object.cpp  Scene.cpp
src/surface/: Triangle.cpp
src/texture/: ConstantTexture.cpp
src/util/: BVH.cpp  ImageBuffer.cpp  ImageUtil.cpp  OBJFile.cpp
src/util/accelerator/: BVH.cpp
src/util/image/: ImageBuffer.cpp  ImageUtil.cpp
src/util/math/: Random.cpp  Vector3d.cpp
src/util/mesh/: OBJFile.cpp
src/util/model/: Box.cpp  Ray.cpp
test/: CMakeLists.txt  test_helper.cpp  test_helper.h
test/camera/: test_defocus_blur.cpp  test_perspective.cpp
test/material/: test_dielectric.cpp  test_lambertian.cpp  test_metal.cpp
test/object/: test_bvhtree.cpp
test/object/mesh/: test_mesh_triangle.cpp
test/object/native/: test_cylinder.cpp  test_disk.cpp  test_rectangle.cpp  test_sphere.cpp  test_triangle.cpp  test_triangular_pyramid.cpp  test_tube.cpp
test/util/image/: test_image_buffer.cpp  test_image_util.cpp
test/util/math/: test_random.cpp  test_vector3d.cpp
test/util/model/: test_box.cpp  test_ray.cpp
